--- a/android/app/src/main/res/layout/fragment_place.xml
+++ b/android/app/src/main/res/layout/fragment_place.xml
@@ -21,33 +21,11 @@
             android:orientation="vertical"
             android:visibility="invisible">
 
-            <RelativeLayout
-                android:id="@+id/imageContainer"
+            <LinearLayout
+                android:id="@+id/placeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/background_checkin">
-
-                <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/image"
-                    android:layout_width="@dimen/mountain_imagesize"
-                    android:layout_height="@dimen/mountain_imagesize"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="4sp"
-                    android:layout_marginRight="4sp" />
-
-                <include
-                    layout="@layout/layout_placeinfo"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@id/image"
-                    android:layout_toStartOf="@id/image" />
-
-            </RelativeLayout>
+                android:orientation="vertical" />
 
             <RelativeLayout
                 android:id="@+id/mapContainer"
