--- a/android/app/src/main/res/layout/item_place.xml
+++ b/android/app/src/main/res/layout/item_place.xml
@@ -8,11 +8,11 @@
         android:id="@+id/image"
         android:layout_width="@dimen/mountain_imagesize"
         android:layout_height="@dimen/mountain_imagesize"
-        android:layout_marginLeft="4sp"
-        android:layout_marginRight="4sp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="4sp"
+        android:layout_marginRight="4sp"
         android:contentDescription="@string/cd_place_image" />
 
     <LinearLayout
@@ -43,8 +43,8 @@
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="3"
-            tools:text="Status"
-            android:textSize="@dimen/textsize_nano" />
+            android:textSize="@dimen/textsize_nano"
+            tools:text="Status" />
     </LinearLayout>
 
     <include
